# vidgen

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  test.py
exceptions/: vid_gen_exceptions.py
models/: config_data.py  config_model.py  prompt.py  story_window_model.py  upload_model.py
user_interface/desktop/: ui.py
user_interface/desktop/components/: api_window.py  clips_window.py  no_window.py  sidebar.py  story_window.py  video_window.py
utility/: config_tools.py  custom_render_logger.py  generate_text.py  generate_voice.py  initialize_program.py  render_story.py  tools.py  upload.py  vidgen_api.py  youtube_tools.py
